--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
     "next": "^14.2.35",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-day-picker": "^9.13.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
     "recharts": "^3.7.0",
     "resend": "^4.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^3.24.0"
   },
