--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "@react-email/components": "^0.0.30",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.95.3",
+    "@tiptap/extension-link": "^3.19.0",
+    "@tiptap/extension-placeholder": "^3.19.0",
+    "@tiptap/pm": "^3.19.0",
+    "@tiptap/react": "^3.19.0",
+    "@tiptap/starter-kit": "^3.19.0",
     "@upstash/ratelimit": "^2.0.0",
     "@upstash/redis": "^1.34.0",
     "class-variance-authority": "^0.7.1",
