TASK-34: Conductor pipeline with LangGraph orchestration
- Add conductor graph.ts with 4-node StateGraph (checkHealth, runScholar, runGhostwriter, finalize)
- Add conductor index.ts with runConductor() public API
- Add weekly-pipeline cron route secured with CRON_SECRET
- Update vercel.json with Monday 6 AM schedule
- Add conductor dispatch to agent run route
- 59 structural tests, 1545 total passing

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/publish-gbp",
       "schedule": "*/30 * * * *"
+    },
+    {
+      "path": "/api/cron/weekly-pipeline",
+      "schedule": "0 6 * * 1"
     }
   ]
 }
