--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "next lint",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "smoke-test": "tsx scripts/smoke-test.ts",
+    "smoke-test:quick": "tsx scripts/smoke-test.ts --skip-agents"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
@@ -73,6 +75,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "tailwindcss-animate": "^1.0.7",
+    "dotenv": "^16.4.0",
+    "tsx": "^4.19.0",
     "typescript": "^5.9.3",
     "vitest": "^2.1.0"
   }
