--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,24 @@
       "path": "/api/cron/weekly-pipeline",
       "schedule": "0 6 * * 1"
     }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "X-Content-Type-Options", "value": "nosniff" },
+        { "key": "X-Frame-Options", "value": "DENY" },
+        { "key": "X-XSS-Protection", "value": "1; mode=block" },
+        { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
+        { "key": "Permissions-Policy", "value": "camera=(), microphone=(), geolocation=()" }
+      ]
+    }
+  ],
+  "redirects": [
+    {
+      "source": "/pricing",
+      "destination": "/#pricing",
+      "permanent": false
+    }
   ]
 }
